
liborcusdir = $(includedir)/liborcus-@ORCUS_API_VERSION@/orcus/spreadsheet
liborcus_HEADERS = \
	types.hpp \
	view_types.hpp \
	export_interface.hpp \
	import_interface.hpp \
	import_interface_pivot.hpp \
	import_interface_styles.hpp \
	import_interface_view.hpp

if BUILD_SPREADSHEET_MODEL

liborcus_HEADERS += \
	auto_filter.hpp \
	config.hpp \
	document.hpp \
	document_types.hpp \
	factory.hpp \
	pivot.hpp \
	shared_strings.hpp \
	sheet.hpp \
	styles.hpp \
	view.hpp

endif
